<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLigthGray"
    tools:context=".ui.VinculaMedico">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/vincula_medico_label"
        android:textAlignment="center"
        android:textColor="@color/colorRedLogin"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRecibeNombre"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />


    <ImageView
        android:id="@+id/imageViewQR"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecibeNombre"
        app:srcCompat="@drawable/ic_center_focus_weak_black_24dp" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_login_ripple"
        android:textColor="@color/colorWhite"
        android:text="@string/qr_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewQR" />

    <EditText
        android:id="@+id/editTextCodigo"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/qr_label_et"
        android:inputType="text"
        android:background="@drawable/edittext_rounded_ligth"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonVincular"
        app:layout_constraintEnd_toEndOf="@+id/buttonCamera"
        app:layout_constraintStart_toStartOf="@+id/buttonCamera"
        app:layout_constraintTop_toBottomOf="@+id/buttonCamera" />

    <Button
        android:id="@+id/buttonVincular"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_login_ripple"
        android:text="@string/vincular_button_label"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewOmitir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/omitir_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCodigo"
        app:layout_constraintTop_toBottomOf="@+id/editTextCodigo" />

</androidx.constraintlayout.widget.ConstraintLayout>