<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLigthGray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.InicioFragment">
<androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />


    <TextView
        android:id="@+id/Nombre_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfile"
        android:layout_marginTop="15dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_persona_login"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/Nombre_usuario"/>

    <TextView
        android:id="@+id/textViewlabelPromedio"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/perfil_promedio_label"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfile"/>

    <TextView
        android:id="@+id/textViewlabelUltimo"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/perfil_ultimo_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfile"/>
    <TextView
        android:id="@+id/textViewPromedio"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="32 mm/dl"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/textViewlabelPromedio"/>

    <TextView
        android:id="@+id/textViewUltimo"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="32 mm/dl"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/textViewlabelUltimo"/>
    <TextView
        android:id="@+id/textViewFechaUltimo"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:text="15-06-2020 00:00:00"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/textViewUltimo"/>

    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_camera"
        android:text="@string/perfil_promedio_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/textViewlabelMuestra"/>

    <TextView
        android:id="@+id/textViewlabelMuestra"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/perfil_muestra_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>